<resources>
    <string name="app_name">MyMaterialProject</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>

    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>

    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>

    <string name="long_btn">Loooonnng</string>
    <string name="short_btn">Short</string>
    <string name="dependent_text_view">Press the button</string>

    <string name="play_video_btn">Play in</string>

    <string name="player_play">Play</string>
    <string name="player_pause">Pause</string>
    <string name="player_stop">Stop</string>

    <string name="chip_group_today">Сегодня</string>
    <string name="chip_group_yesterday">Вчера</string>
    <string name="chip_group_before_yesterday">Позавчера</string>

    <string name="tab_item_strict_theme">Строгая</string>
    <string name="tab_item_light_theme">Светлая</string>
    <string name="tab_item_dark_theme">Темная</string>
    <string name="potd">POTD</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nasa">NASA</string>
    <string name="recycler">recycler</string>

    <string name="large_text_mars">Марс -- четвёртая по удалённости от Солнца и седьмая по размерам планета Солнечной системы. Названа в честь Марса -- древнеримского бога войны, соответствующего древнегреческому Аресу. Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого ей минералом маггемитом (оксидом железа).</string>
</resources>