<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_POTD"
        android:icon="@drawable/ic_picture_of_the_day"
        android:title="@string/potd"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_list"
        android:title="@string/recycler"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_nasa_icon"
        android:title="@string/nasa"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>