<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.pictureOfTheDay.PictureOfTheDayFragment"
            android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_wiki"
                android:layout_marginBottom="10dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:endIconCheckable="true"
                app:endIconTint="#1E4463"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintBottom_toTopOf="@+id/chipContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chipContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/imageView">

            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:selectionRequired="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.Chip
                        android:id="@+id/chipToday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_group_today"/>
                <com.google.android.material.chip.Chip
                        android:id="@+id/chipYesterday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_group_yesterday"/>
                <com.google.android.material.chip.Chip
                        android:id="@+id/chipBeforeYesterday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_group_before_yesterday"/>

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.Chip
                        android:id="@+id/chipHdImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="hd"/>

            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ru.geekbrains.mymaterialproject.util.EquilateralImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_no_photo_vector"/>

        <Button
                style="@style/Widget.Material3.Button.TextButton.Dialog.Icon"
                app:icon="@drawable/ic_play_btn"
                android:id="@+id/playVideoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_video_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/bottom_sheet_layout"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>